--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -738,6 +738,10 @@ ol {
 }
 
 /*---------------------
+	Login
+-----------------------*/
+
+/*---------------------
   Latest Product
 -----------------------*/
 
