review update jm

--- a/src/main/webapp/resources/css/courses.css
+++ b/src/main/webapp/resources/css/courses.css
@@ -423,16 +423,7 @@ section
 {
 	width: 100px;
 }
-.logo
-{
-	width: 60px;
-	height: 60px;
-	-webkit-transition: all 200ms ease;
-	-moz-transition: all 200ms ease;
-	-ms-transition: all 200ms ease;
-	-o-transition: all 200ms ease;
-	transition: all 200ms ease;
-}
+
 .logo img
 {
 	max-width: 100%;
@@ -1199,6 +1190,7 @@ section
 	margin-right: 15px;
 	vertical-align: middle;
 }
+
 .course_mark
 {
 	position: absolute;
@@ -1235,18 +1227,16 @@ section
 {
 	width: 195px;
 	height: 43px;
-	margin-left: auto;
-	margin-right: auto;
 	background: #f8f8f8;
 	border: solid 1px #dfdfdf;
 	border-radius: 3px;
 	text-align: center;
-	margin-top: 70px;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
+	float:left;
 }
 .load_more_button a
 {
@@ -1556,4 +1546,78 @@ section
 .footer_social ul li a i:hover
 {
 	color: rgba(255,255,255,1);
+}
+.jm1{
+	text-align:center;
+}
+.rating .rate_radio + label {
+    position: relative;
+    display: inline-block;
+    margin-left: -4px;
+    z-index: 10;
+    width: 60px;
+    height: 60px;
+    background-image: url('/img/starrate.png');
+    background-repeat: no-repeat;
+    background-size: 60px 60px;
+    cursor: pointer;
+    background-color: #f0f0f0;
+}
+.rating .rate_radio:checked + label {
+    background-color: #ff8;
+}
+.wrap{
+    max-width: 480px;
+    margin: 0 auto; /* 화면 가운데로 */
+    background-color: #fff;
+    height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+
+}
+.reviewform textarea{
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.rating .rate_radio {
+    position: relative;
+    display: inline-block;
+    z-index: 20;
+    opacity: 0.001;
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    cursor: pointer;
+    vertical-align: top;
+    display: none;
+}
+.rating .rate_radio + label {
+    position: relative;
+    display: inline-block;
+    margin-left: -4px;
+    z-index: 10;
+    width: 60px;
+    height: 60px;
+    background-image: url("/img/starrate.png");
+    background-repeat: no-repeat;
+    background-size: 60px 60px;
+    cursor: pointer;
+    background-color: #f0f0f0;
+}
+.rating .rate_radio:checked + label {
+    background-color: #ff8;
+}
+
+.warning_msg {
+    display: none;
+    position: relative;
+    text-align: center;
+    background: #ffffff;
+    line-height: 26px;
+    width: 100%;
+    color: red;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #e0e0e0;
 }
