--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -258,9 +258,15 @@ ol {
 /*---------------------
   Header
 -----------------------*/
-
+body{padding-top:104px;}
 .header-section {
-	height: 104px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height:104px;
+	background-color:#fff;
+	z-index: 100;
 	padding-top: 38px;
 	padding-bottom: 24px;
 	padding-left: 45px;
@@ -2365,4 +2371,18 @@ ol {
 	.header-info {
 		padding: 10px 0;
 	}
+}
+.float_right{
+	float: right;
+	width: 195px;
+    height: 43px;
+    margin-left: auto;
+    margin-right: auto;
+    background: #f8f8f8;
+    border: solid 1px #dfdfdf;
+    border-radius: 3px;
+    text-align: center;
+}
+.float_left{
+	float: left;
 }
