--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -258,7 +258,7 @@ ol {
 /*---------------------
   Header
 -----------------------*/
-body{padding-top:104px;}
+.headerbody{padding-top:104px;}
 .header-section {
 	position: fixed;
 	top: 0;
@@ -2422,7 +2422,6 @@ input[id="termcheck1"]:checked+label em, input[id="termcheck2"]:checked+label em
 	.header-info {
 		padding: 10px 0;
 	}
-<<<<<<< HEAD
 }
 .float_right{
 	float: right;
@@ -2508,5 +2507,163 @@ body {
 .effect6:hover figcaption {
     transform: translatex(0px) rotate(0deg);
     opacity: 1;
->>>>>>> a50c354202279d063f772eb2d45ac7292e5c73bd
+
 }
+
+/* 공지사항 */
+.search_wrap {margin-top:100px;}
+.record_group {float:left;}
+.record_group span {color:#007dc6;}
+.panel_title
+{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	color: rgba(0,0,0,0.8);
+	font-weight: 700;
+}
+.search_group {float:right; margin-bottom: 20px;}
+.search_group .select {height:44px; border:1px solid #e0e0e0; padding:5px;}
+.search_group .search_word {height:44px; border:1px solid #e0e0e0; padding:5px; width:220px;}
+.search_group .btn_search {height:44px; padding:5px 15px; border:1px solid #e0e0e0; background:transparent; /*투명하게*/ font-size:16px;vertical-align:bottom;}
+.search_group .btn_write {
+	background: #000;
+	padding: 10px 23px;
+	color: #fff;
+	float: right;
+}
+.panel_title
+{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	color: rgba(0,0,0,0.8);
+	font-weight: 700;
+}
+.bord_list {clear:both; padding-top:5px;}
+.bord_table {width:100%;}
+.bord_list th {border-bottom:2px solid #333; text-align:center; color:#000;}
+.bord_table td {border-bottom:1px solid #e0e0e0; padding:15px 5px; text-align:center;}
+.bord_table td.title {text-align:left;}
+.bord_table a{color:#000;}
+.bord_table a i{font-size:17px; padding-right:8px;}
+
+/*paging*/
+.paging {
+	clear: both;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	text-align: center;
+	text-align: center;
+	width: 100%;
+	
+}
+
+.paging a {
+	padding: 8px 10px;
+	border: 1px solid #e0e0e0;
+	border-radius: 5px;
+	color: #000;
+}
+
+.paging a.active {
+	background: #000;
+	color: #fff;
+	padding: 8px 13px;
+}
+
+/*faq*/
+
+.faqs
+{
+	margin-top: 29px;
+}
+.elements_accordions
+{
+	margin-top: 34px;
+}
+.accordion_container
+{
+	margin-bottom: 12px;
+	border: solid 1px #e5e5e5;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-top: 16px;
+	padding-bottom: 5px;
+}
+.accordion
+{
+	width: 100%;
+	cursor: pointer;
+	color: #000000;
+	font-size: 14px;
+	font-weight: 500;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.accordion div
+{
+	max-width: 90%;
+	overflow: hidden;
+	white-space: nowrap;
+	font-size: 14px;
+	font-weight: 700;
+	color: rgba(0,0,0,0.4);
+}
+.accordion.active div,
+.accordion div:hover
+{
+	color: rgba(0,0,0,0.6);
+}
+.accordion::before
+{
+	display: inline-block;
+	font-family: 'FontAwesome';
+	content: '\f067';
+	font-size: 14px;
+	color: rgba(0,0,0,0.4);
+	font-weight: 300;
+	vertical-align: middle;
+	margin-right: 20px;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.accordion.active::before,
+.accordion:hover::before
+{
+	color: rgba(0,0,0,0.6);
+}
+.accordion.active::before
+{
+	content: '\f068';
+}
+.accordion_panel
+{
+	padding-right: 8px;
+	padding-left: 32px;
+	padding-top: 11px;
+	max-height: 0px;
+	overflow: hidden;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+}
+.accordion.active + .accordion_panel
+{
+	margin-bottom: 10px;
+}
+.accordion_panel p
+{
+	font-size: 13px;
+	font-weight: 400;
+	color: rgba(0,0,0,0.4);
+	line-height: 1.71;
+}
+
+
